--- a/index.html
+++ b/index.html
@@ -109,7 +109,6 @@
             });
 
             if (response.status === 200) {
-              alert('ログイン成功');
               // ログイン成功後の処理
               window.location.href = 'index_form.html'; 
             }
@@ -117,7 +116,7 @@
             if (error.response) {
               // エラーレスポンスがある場合の処理
               if (error.response.status === 401) {
-                alert('ID または Password が一致しません。');
+                alert('ID または パスワード が一致しません。');
               } else {
                 alert('ログイン中にエラーが発生しました。');
               }
