--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         async handleLoginClick() {
           try {
             // API リクエストの URL
-            const response = await axios.get('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/SELECT', {
+            const response = await axios.get('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/Login', {
               params: {
                 ID: this.id,
                 Password: this.password
