--- a/index_SignUp.html
+++ b/index_SignUp.html
@@ -168,7 +168,7 @@
           };
 
           // サーバーにデータを送信
-          const response = await axios.post('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/INSERT', formData);
+          const response = await axios.post('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/RegisterUser', formData);
 
           // レスポンスの処理
           formMessage.textContent = response.data.Message;
