--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+08/15 更新版 index
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -10,7 +12,7 @@
     [v-cloak] {
       display: none;
     }
-
+    
     /* 全体のスタイル設定 */
     body, html {
       margin: 0;
@@ -98,7 +100,7 @@
         async handleLoginClick() {
           try {
             // API リクエストの URL
-            const response = await axios.get('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/Login', {
+            const response = await axios.get('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/SELECT', {
               params: {
                 ID: this.id,
                 Password: this.password
@@ -110,10 +112,6 @@
 
             if (response.status === 200) {
               // ログイン成功後の処理
-              const result = response.data;
-              // 成功時に Nickname をセッションストレージに保存
-              sessionStorage.setItem('userID', this.id);
-              sessionStorage.setItem('userNickname', result.Nickname);
               window.location.href = 'index_form.html'; 
             }
           } catch (error) {
