--- a/index_form.html
+++ b/index_form.html
@@ -38,9 +38,10 @@
         <v-divider></v-divider>
         <v-list>
           <v-list-item-group v-if="posts.length">
-            <v-list-item v-for="(post, index) in posts" :key="index">
+            <v-list-item v-for="(post, index) in posts" :key="post.PostID">
               <v-list-item-content>
-                <v-list-item-subtitle>{{ post.content }}</v-list-item-subtitle>
+                <v-list-item-subtitle>{{ post.Content }}</v-list-item-subtitle>
+                <v-list-item-subtitle class="grey--text">{{ post.Nickname }} - {{ new Date(post.Timestamp).toLocaleString() }}</v-list-item-subtitle>
               </v-list-item-content>
             </v-list-item>
           </v-list-item-group>
@@ -56,7 +57,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
-
   <script>
     new Vue({
       el: '#app',
@@ -70,17 +70,52 @@
         };
       },
       methods: {
-        addPost() {
+        async addPost() {
           if (this.newPost.content) {
-            this.posts.push({
-              content: this.newPost.content
-            });
-            // フォームをクリアする
-            this.newPost.content = '';
+            try {
+              const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/ADD_POST', {
+                method: 'POST',
+                headers: {
+                  'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({
+                  UserID: 'testUser', // 適切なユーザーIDに置き換えてください
+                  Content: this.newPost.content
+                })
+              });
+
+              if (response.ok) {
+                const result = await response.json();
+                console.log(result);
+                this.newPost.content = ''; // フォームをクリアする
+                this.fetchPosts(); // 投稿リストを再取得する
+              } else {
+                alert('投稿に失敗しました');
+              }
+            } catch (error) {
+              console.error('Error:', error);
+              alert('エラーが発生しました');
+            }
           } else {
             alert('内容を入力してください');
           }
+        },
+        async fetchPosts() {
+          try {
+            const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/GET_POSTS');
+            if (response.ok) {
+              const result = await response.json();
+              this.posts = result;
+            } else {
+              console.error('Failed to fetch posts');
+            }
+          } catch (error) {
+            console.error('Error:', error);
+          }
         }
+      },
+      created() {
+        this.fetchPosts(); // コンポーネントが作成されたときに投稿リストを取得する
       }
     });
   </script>
