--- a/index_form.html
+++ b/index_form.html
@@ -38,10 +38,11 @@
         <v-divider></v-divider>
         <v-list>
           <v-list-item-group v-if="posts.length">
-            <v-list-item v-for="(post, index) in posts" :key="post.PostID">
+            <v-list-item v-for="(post, index) in posts" :key="post.ID">
               <v-list-item-content>
                 <v-list-item-subtitle>{{ post.Content }}</v-list-item-subtitle>
-                <v-list-item-subtitle class="grey--text">{{ post.Nickname }} - {{ new Date(post.Timestamp).toLocaleString() }}</v-list-item-subtitle>
+                <v-list-item-subtitle>投稿者: {{ post.Username }}</v-list-item-subtitle>
+                <v-list-item-subtitle>投稿日: {{ new Date(post.CreatedAt).toLocaleString() }}</v-list-item-subtitle>
               </v-list-item-content>
             </v-list-item>
           </v-list-item-group>
@@ -57,6 +58,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+
   <script>
     new Vue({
       el: '#app',
@@ -69,6 +71,9 @@
           posts: []
         };
       },
+      created() {
+        this.fetchPosts();
+      },
       methods: {
         async addPost() {
           if (this.newPost.content) {
@@ -76,25 +81,23 @@
               const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/ADD_POST', {
                 method: 'POST',
                 headers: {
-                  'Content-Type': 'application/json',
+                  'Content-Type': 'application/json'
                 },
                 body: JSON.stringify({
-                  UserID: 'testUser', // 適切なユーザーIDに置き換えてください
-                  Content: this.newPost.content
+                  Content: this.newPost.content,
+                  Username: 'Anonymous' // 必要に応じて変更
                 })
               });
-
+              const result = await response.json();
               if (response.ok) {
-                const result = await response.json();
-                console.log(result);
-                this.newPost.content = ''; // フォームをクリアする
-                this.fetchPosts(); // 投稿リストを再取得する
+                this.newPost.content = ''; // フォームをクリア
+                this.fetchPosts(); // 投稿リストを再取得
               } else {
-                alert('投稿に失敗しました');
+                alert(result.Message || '投稿に失敗しました');
               }
             } catch (error) {
-              console.error('Error:', error);
-              alert('エラーが発生しました');
+              console.error('Error adding post:', error);
+              alert('投稿に失敗しました');
             }
           } else {
             alert('内容を入力してください');
@@ -103,19 +106,17 @@
         async fetchPosts() {
           try {
             const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/GET_POSTS');
+            const result = await response.json();
             if (response.ok) {
-              const result = await response.json();
-              this.posts = result;
+              this.posts = result.Posts;
             } else {
-              console.error('Failed to fetch posts');
+              alert('投稿の取得に失敗しました');
             }
           } catch (error) {
-            console.error('Error:', error);
+            console.error('Error fetching posts:', error);
+            alert('投稿の取得に失敗しました');
           }
         }
-      },
-      created() {
-        this.fetchPosts(); // コンポーネントが作成されたときに投稿リストを取得する
       }
     });
   </script>
