--- a/index_form.html
+++ b/index_form.html
@@ -31,6 +31,11 @@
             rows="5"
             required
           ></v-textarea>
+          <v-text-field
+            v-model="newPost.username"
+            label="ニックネーム"
+            required
+          ></v-text-field>
           <v-btn @click="addPost" color="primary">投稿</v-btn>
         </v-form>
 
@@ -66,7 +71,8 @@
       data() {
         return {
           newPost: {
-            content: ''
+            content: '',
+            username: ''
           },
           posts: []
         };
@@ -76,7 +82,7 @@
       },
       methods: {
         async addPost() {
-          if (this.newPost.content) {
+          if (this.newPost.content && this.newPost.username) {
             try {
               const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/ADD_POST', {
                 method: 'POST',
@@ -85,12 +91,13 @@
                 },
                 body: JSON.stringify({
                   Content: this.newPost.content,
-                  Username: 'Anonymous' // 必要に応じて変更
+                  Username: this.newPost.username
                 })
               });
               const result = await response.json();
               if (response.ok) {
                 this.newPost.content = ''; // フォームをクリア
+                this.newPost.username = ''; // フォームをクリア
                 this.fetchPosts(); // 投稿リストを再取得
               } else {
                 alert(result.Message || '投稿に失敗しました');
@@ -100,7 +107,7 @@
               alert('投稿に失敗しました');
             }
           } else {
-            alert('内容を入力してください');
+            alert('内容とニックネームを入力してください');
           }
         },
         async fetchPosts() {
