--- a/index_SignUpResult.html
+++ b/index_SignUpResult.html
@@ -72,7 +72,7 @@
                 登録が正常に完了しました。<br>
                 これからログインしてご利用ください。
               </v-card-subtitle>
-              <a href="index_SignUp.html" class="back-link">ログインページに戻る</a>
+              <a href="index.html" class="back-link">ログインページに戻る</a>
             </v-card>
           </v-col>
         </v-row>
