--- a/index_form.html
+++ b/index_form.html
@@ -17,6 +17,10 @@
       border: 1px solid #ddd;
       border-radius: 4px;
     }
+    .error-message {
+      color: red;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
@@ -25,6 +29,11 @@
       <v-container class="container">
         <!-- 投稿フォーム -->
         <v-form>
+          <v-text-field
+            v-model="newPost.username"
+            label="ニックネーム"
+            required
+          ></v-text-field>
           <v-textarea
             v-model="newPost.content"
             label="内容"
@@ -32,6 +41,9 @@
             required
           ></v-textarea>
           <v-btn @click="addPost" color="primary">投稿</v-btn>
+          <v-alert v-if="errorMessage" type="error" class="error-message">
+            {{ errorMessage }}
+          </v-alert>
         </v-form>
 
         <!-- 投稿リスト -->
@@ -40,7 +52,9 @@
           <v-list-item-group v-if="posts.length">
             <v-list-item v-for="(post, index) in posts" :key="index">
               <v-list-item-content>
-                <v-list-item-subtitle>{{ post.content }}</v-list-item-subtitle>
+                <v-list-item-subtitle>{{ post.Content }}</v-list-item-subtitle>
+                <v-list-item-subtitle>投稿者: {{ post.Username }}</v-list-item-subtitle>
+                <v-list-item-subtitle>投稿日: {{ new Date(post.CreatedAt).toLocaleString() }}</v-list-item-subtitle>
               </v-list-item-content>
             </v-list-item>
           </v-list-item-group>
@@ -64,21 +78,58 @@
       data() {
         return {
           newPost: {
-            content: ''
+            content: '',
+            username: ''
           },
-          posts: []
+          posts: [],
+          errorMessage: ''
         };
       },
+      created() {
+        this.fetchPosts();
+      },
       methods: {
-        addPost() {
-          if (this.newPost.content) {
-            this.posts.push({
-              content: this.newPost.content
-            });
-            // フォームをクリアする
-            this.newPost.content = '';
+        async addPost() {
+          if (this.newPost.content && this.newPost.username) {
+            try {
+              const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/ADD_POST', {
+                method: 'POST',
+                headers: {
+                  'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                  Content: this.newPost.content,
+                  Username: this.newPost.username
+                })
+              });
+              const result = await response.json();
+              if (response.ok) {
+                this.newPost.content = ''; // フォームをクリア
+                this.newPost.username = ''; // フォームをクリア
+                this.fetchPosts(); // 投稿リストを再取得
+              } else {
+                this.errorMessage = result.Message || '投稿に失敗しました';
+              }
+            } catch (error) {
+              console.error('Error adding post:', error);
+              this.errorMessage = '投稿に失敗しました';
+            }
           } else {
-            alert('内容を入力してください');
+            alert('内容とニックネームを入力してください');
+          }
+        },
+        async fetchPosts() {
+          try {
+            const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/GET_POSTS');
+            const result = await response.json();
+            if (response.ok) {
+              this.posts = result.Posts;
+            } else {
+              this.errorMessage = '投稿の取得に失敗しました: ' + result.Message;
+            }
+          } catch (error) {
+            console.error('Error fetching posts:', error);
+            this.errorMessage = '投稿の取得に失敗しました';
           }
         }
       }
