--- a/index_form.html
+++ b/index_form.html
@@ -103,7 +103,8 @@
               const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/posts', {
                 method: 'POST',
                 headers: {
-                  'Content-Type': 'application/json'
+                  'Content-Type': 'application/json',
+                  // 'Authorization': 'Bearer YOUR_ACCESS_TOKEN' // 必要に応じて認証情報を追加
                 },
                 body: JSON.stringify({
                   nickname: this.newPost.nickname,
@@ -111,8 +112,17 @@
                 })
               });
               
-              const result = await response.json();
-              console.log(result); // レスポンスのログ
+              const text = await response.text(); // レスポンスをテキストとして取得
+              console.log('Response Text:', text); // テキストをログに出力
+
+              let result;
+              try {
+                result = JSON.parse(text); // テキストをJSONにパース
+              } catch (e) {
+                console.error('Error parsing JSON:', e);
+                alert('投稿に失敗しました');
+                return;
+              }
 
               if (response.ok) {
                 // 投稿が成功した場合、投稿をリストに追加
@@ -139,7 +149,17 @@
         try {
           // GETリクエストをAPIに送信して投稿リストを取得
           const response = await fetch('https://m3h-tomoki-3appfunctionapiapp.azurewebsites.net/api/posts');
-          const result = await response.json();
+          const text = await response.text(); // レスポンスをテキストとして取得
+          console.log('Response Text:', text); // テキストをログに出力
+
+          let result;
+          try {
+            result = JSON.parse(text); // テキストをJSONにパース
+          } catch (e) {
+            console.error('Error parsing JSON:', e);
+            return;
+          }
+
           if (response.ok) {
             this.posts = result; // APIから取得した投稿リストを設定
           } else {
