--- a/index_SignUpResult.html
+++ b/index_SignUpResult.html
@@ -1,3 +1,5 @@
+0815 更新版 index_SignUpResult
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -72,7 +74,7 @@
                 登録が正常に完了しました。<br>
                 これからログインしてご利用ください。
               </v-card-subtitle>
-              <a href="index.html" class="back-link">ログインページに戻る</a>
+              <a href="index_SignUp.html" class="back-link">ログインページに戻る</a>
             </v-card>
           </v-col>
         </v-row>
