--- a/index_form.html
+++ b/index_form.html
@@ -1,88 +1,298 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-  <title>掲示板</title>
-  <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
-  <style>
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    .post-item {
-      margin-bottom: 20px;
-      padding: 15px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-    }
-  </style>
-</head>
-<body>
-  <div id="app">
-    <v-app>
-      <v-container class="container">
-        <!-- 投稿フォーム -->
-        <v-form>
-          <v-textarea
-            v-model="newPost.content"
-            label="内容"
-            rows="5"
-            required
-          ></v-textarea>
-          <v-btn @click="addPost" color="primary">投稿</v-btn>
-        </v-form>
+using System;
+using System.Collections.Generic;
+using System.IO;
+using System.Threading.Tasks;
+using Microsoft.AspNetCore.Mvc;
+using Microsoft.Azure.WebJobs;
+using Microsoft.Azure.WebJobs.Extensions.Http;
+using Microsoft.AspNetCore.Http;
+using Microsoft.Extensions.Logging;
+using Microsoft.Data.SqlClient; // DB接続用ライブラリ
+using Newtonsoft.Json;
 
-        <!-- 投稿リスト -->
-        <v-divider></v-divider>
-        <v-list>
-          <v-list-item-group v-if="posts.length">
-            <v-list-item v-for="(post, index) in posts" :key="index">
-              <v-list-item-content>
-                <v-list-item-subtitle>{{ post.content }}</v-list-item-subtitle>
-              </v-list-item-content>
-            </v-list-item>
-          </v-list-item-group>
-          <v-list-item v-else>
-            <v-list-item-content>
-              <v-list-item-title>投稿はまだありません</v-list-item-title>
-            </v-list-item-content>
-          </v-list-item>
-        </v-list>
-      </v-container>
-    </v-app>
-  </div>
+namespace FunctionAPIApp
+{
+    public static class Function1
+    {
+        [FunctionName("SELECT")]
+        public static async Task<IActionResult> Run(
+            [HttpTrigger(AuthorizationLevel.Anonymous, "get", "post", Route = null)] HttpRequest req,
+            ILogger log)
+        {
+            // インサート用のパラメーター取得（GETメソッド用）
+            string id = req.Query["ID"];
+            string password = req.Query["Password"];
 
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+            // インサート用のパラメーター取得（POSTメソッド用）
+            string requestBody = await new StreamReader(req.Body).ReadToEndAsync();
+            dynamic data = JsonConvert.DeserializeObject(requestBody);
+            id = id ?? data?.ID;
+            password = password ?? data?.Password;
 
-  <script>
-    new Vue({
-      el: '#app',
-      vuetify: new Vuetify(),
-      data() {
-        return {
-          newPost: {
-            content: ''
-          },
-          posts: []
-        };
-      },
-      methods: {
-        addPost() {
-          if (this.newPost.content) {
-            this.posts.push({
-              content: this.newPost.content
-            });
-            // フォームをクリアする
-            this.newPost.content = '';
-          } else {
-            alert('内容を入力してください');
-          }
+            // パラメーターが設定されていない場合はエラーメッセージを返す
+            if (string.IsNullOrWhiteSpace(id) || string.IsNullOrWhiteSpace(password))
+            {
+                return new BadRequestObjectResult(new
+                {
+                    Message = "ID または Password が指定されていません。",
+                    StatusCode = StatusCodes.Status400BadRequest
+                });
+            }
+
+            try
+            {
+                // DB接続設定（接続文字列の構築）
+                SqlConnectionStringBuilder builder = new SqlConnectionStringBuilder
+                {
+                    DataSource = "m3h-tomokimure-server.database.windows.net",
+                    UserID = "torutoru2004",
+                    Password = "Tomoki0526",
+                    InitialCatalog = "m3h-Tomoki-ultimateDB"
+                };
+
+                // 接続用オブジェクトの初期化
+                using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
+                {
+                    // 実行するクエリ（パラメーター化）
+                    string sql = "SELECT COUNT(1) FROM MemberTable WHERE ID = @ID AND Password = @Password";
+
+                    // SQL実行オブジェクトの初期化
+                    using (SqlCommand command = new SqlCommand(sql, connection))
+                    {
+                        // パラメーターの追加
+                        command.Parameters.AddWithValue("@ID", id);
+                        command.Parameters.AddWithValue("@Password", password);
+
+                        // DBと接続
+                        await connection.OpenAsync();
+
+                        // SQLを実行し、結果を確認
+                        int count = (int)await command.ExecuteScalarAsync();
+
+                        if (count > 0)
+                        {
+                            // IDとPasswordが一致する場合
+                            return new OkObjectResult(new
+                            {
+                                Message = "OK",
+                                StatusCode = StatusCodes.Status200OK
+                            });
+                        }
+                        else
+                        {
+                            // IDまたはPasswordが一致しない場合
+                            return new UnauthorizedObjectResult(new
+                            {
+                                Message = "ID または Password が一致しません。",
+                                StatusCode = StatusCodes.Status401Unauthorized
+                            });
+                        }
+                    }
+                }
+            }
+            catch (SqlException e)
+            {
+                // エラーをログに出力
+                log.LogError(e.ToString());
+
+                return new StatusCodeResult(StatusCodes.Status500InternalServerError);
+            }
         }
-      }
-    });
-  </script>
-</body>
-</html>
+
+        [FunctionName("INSERT")]
+        public static async Task<IActionResult> RunInsert(
+            [HttpTrigger(AuthorizationLevel.Anonymous, "post", Route = null)] HttpRequest req,
+            ILogger log)
+        {
+            log.LogInformation("C# HTTP trigger function processed a request.");
+
+            // HTTPレスポンスで返す文字列を定義
+            string responseMessage = "INSERT RESULT:";
+
+            // POSTメソッド用のインサート用のパラメーター取得
+            string requestBody = await new StreamReader(req.Body).ReadToEndAsync();
+            dynamic data = JsonConvert.DeserializeObject(requestBody);
+            string nickname = data?.Nickname;
+            string id = data?.ID;
+            string password = data?.Password;
+
+            // パラメーターが全て取得できた場合のみ処理
+            if (!string.IsNullOrWhiteSpace(nickname) && !string.IsNullOrWhiteSpace(id) && !string.IsNullOrWhiteSpace(password))
+            {
+                try
+                {
+                    // DB接続設定（接続文字列の構築）
+                    SqlConnectionStringBuilder builder = new SqlConnectionStringBuilder
+                    {
+                        DataSource = "m3h-tomokimure-server.database.windows.net",
+                        UserID = "torutoru2004",
+                        Password = "Tomoki0526",
+                        InitialCatalog = "m3h-Tomoki-ultimateDB"
+                    };
+
+                    // SQLコネクションを初期化
+                    using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
+                    {
+                        // 実行するSQL（パラメーター付き）
+                        string sql = "INSERT INTO MemberTable (Nickname, ID, Password) VALUES (@Nickname, @ID, @Password)";
+
+                        // SQLコマンドを初期化
+                        using (SqlCommand command = new SqlCommand(sql, connection))
+                        {
+                            // パラメーターを設定
+                            command.Parameters.AddWithValue("@Nickname", nickname);
+                            command.Parameters.AddWithValue("@ID", id);
+                            command.Parameters.AddWithValue("@Password", password);
+
+                            // コネクションオープン（＝ SQL Database に接続）
+                            await connection.OpenAsync();
+
+                            // SQLコマンドを実行し結果行数を取得
+                            int result = await command.ExecuteNonQueryAsync();
+
+                            // 結果をレスポンスに格納
+                            responseMessage = responseMessage + $"{result} 行挿入されました";
+                        }
+                    }
+                }
+                // DB処理でエラーが発生した場合
+                catch (SqlException e)
+                {
+                    // エラーをレスポンスに格納
+                    responseMessage = "データベースエラーが発生しました: " + e.Message;
+                    log.LogError(e.ToString());
+                }
+            }
+            else
+            {
+                responseMessage = "必要なパラメーターが設定されていません";
+            }
+
+            // HTTPレスポンスを返却
+            return new OkObjectResult(responseMessage);
+        }
+
+        [FunctionName("INSERT_FORTUNE")]
+        public static async Task<IActionResult> InsertFortune(
+            [HttpTrigger(AuthorizationLevel.Anonymous, "post", Route = null)] HttpRequest req,
+            ILogger log)
+        {
+            log.LogInformation("C# HTTP trigger function processed a request.");
+
+            // HTTPレスポンスで返す文字列を定義
+            string responseMessage = "INSERT RESULT:";
+
+            // POSTメソッド用のインサート用のパラメーター取得
+            string requestBody = await new StreamReader(req.Body).ReadToEndAsync();
+            dynamic data = JsonConvert.DeserializeObject(requestBody);
+            string result = data?.Result;
+
+            // パラメーターが設定されていない場合はエラーメッセージを返す
+            if (string.IsNullOrWhiteSpace(result))
+            {
+                responseMessage = "結果が指定されていません";
+                return new BadRequestObjectResult(responseMessage);
+            }
+
+            try
+            {
+                // DB接続設定（接続文字列の構築）
+                SqlConnectionStringBuilder builder = new SqlConnectionStringBuilder
+                {
+                    DataSource = "m3h-tomokimure-server.database.windows.net",
+                    UserID = "torutoru2004",
+                    Password = "Tomoki0526",
+                    InitialCatalog = "m3h-Tomoki-ultimateDB"
+                };
+
+                // SQLコネクションを初期化
+                using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
+                {
+                    // 実行するSQL（パラメーター付き）
+                    string sql = "INSERT INTO FortuneResults (Result) VALUES (@Result)";
+
+                    // SQLコマンドを初期化
+                    using (SqlCommand command = new SqlCommand(sql, connection))
+                    {
+                        // パラメーターを設定
+                        command.Parameters.AddWithValue("@Result", result);
+
+                        // コネクションオープン（＝ SQL Database に接続）
+                        await connection.OpenAsync();
+
+                        // SQLコマンドを実行し結果行数を取得
+                        int resultCount = await command.ExecuteNonQueryAsync();
+
+                        // 結果をレスポンスに格納
+                        responseMessage = responseMessage + $"{resultCount} 行挿入されました";
+                    }
+                }
+            }
+            catch (SqlException e)
+            {
+                // エラーをレスポンスに格納
+                responseMessage = "データベースエラーが発生しました: " + e.Message;
+                log.LogError(e.ToString());
+            }
+
+            // HTTPレスポンスを返却
+            return new OkObjectResult(responseMessage);
+        }
+
+        [FunctionName("GET_FORTUNE_RESULTS")]
+        public static async Task<IActionResult> GetFortuneResults(
+            [HttpTrigger(AuthorizationLevel.Anonymous, "get", Route = null)] HttpRequest req,
+            ILogger log)
+        {
+            log.LogInformation("C# HTTP trigger function processed a request.");
+
+            try
+            {
+                // DB接続設定（接続文字列の構築）
+                SqlConnectionStringBuilder builder = new SqlConnectionStringBuilder
+                {
+                    DataSource = "m3h-tomokimure-server.database.windows.net",
+                    UserID = "torutoru2004",
+                    Password = "Tomoki0526",
+                    InitialCatalog = "m3h-Tomoki-ultimateDB"
+                };
+
+                // SQLコネクションを初期化
+                using (SqlConnection connection = new SqlConnection(builder.ConnectionString))
+                {
+                    // 実行するSQL
+                    string sql = "SELECT * FROM FortuneResults";
+
+                    // SQLコマンドを初期化
+                    using (SqlCommand command = new SqlCommand(sql, connection))
+                    {
+                        // コネクションオープン（＝ SQL Database に接続）
+                        await connection.OpenAsync();
+
+                        // SQLコマンドを実行し、結果を取得
+                        using (SqlDataReader reader = await command.ExecuteReaderAsync())
+                        {
+                            var results = new List<object>();
+                            while (await reader.ReadAsync())
+                            {
+                                results.Add(new
+                                {
+                                    Id = reader["Id"],
+                                    Result = reader["Result"]
+                                });
+                            }
+
+                            return new OkObjectResult(results);
+                        }
+                    }
+                }
+            }
+            catch (SqlException e)
+            {
+                // エラーをレスポンスに格納
+                log.LogError(e.ToString());
+                return new StatusCodeResult(StatusCodes.Status500InternalServerError);
+            }
+        }
+    }
+}
